# ai-agent-production-lab

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: service-inquiry.yml
.github/workflows/: ci.yml
agent_lab/: __init__.py  evals.py  report.py  runtime.py
architecture/: blueprint.json
docs/: BUSINESS_OPERATIONS.md  COMMERCIALIZATION_INDEX.md  DEPLOYMENT_ACTIVATION.md  PAYMENTS_AND_REFUNDS_DRAFT.md  PRIVACY_POLICY_DRAFT.md  REVENUE_READINESS.md  architecture-evidence-map.md  cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  enterprise-readiness.md  monetization-playbook.md  openrouter-routing.md  product-operating-model.md  provider-neutral-agent-patterns.md  quality-gate.md  revenue-architecture.md  revenue-growth-model.md  reviewer-evidence-map.md  search-growth-implementation.md  service-architecture.md  service-growth-model.md  service-launch-playbook.md  service-offer.json  service-package.md  system-architecture.md
docs/architecture/: blueprint.json
examples/: tasks.json
scripts/: run_demo.py
site/: index.html  llms.txt  robots.txt  sitemap.xml
tests/: test_runtime.py
