[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-production-lab"
version = "0.1.0"
description = "Self-contained agent runtime reliability and evaluation lab."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "KIM3310" }]

[tool.setuptools.packages.find]
include = ["agent_lab*"]
